# uminho-schedule-tool

./: .gitignore  README.md  config.yml  lesson.py  main.py  pyproject.toml  scraper.py
modules/: base.py  ics_export.py  json_export.py
